@@ -20,7 +20,7 @@
 #define COMMAND_CLASS_SENSOR_BINARY				0x30
 #define COMMAND_CLASS_SENSOR_MULTILEVEL			0x31
 #define COMMAND_CLASS_METER						0x32
-#define COMMAND_CLASS_ZIP_ADV_SERVER			0x33
+#define COMMAND_CLASS_COLOR_CONTROL				0x33
 #define COMMAND_CLASS_ZIP_ADV_CLIENT			0x34
 #define COMMAND_CLASS_METER_PULSE				0x35
 #define COMMAND_CLASS_THERMOSTAT_HEATING		0x38
