@@ -738,9 +738,8 @@ typedef struct MD5Context {
 #define byteReverse(buf, len) // Do nothing
 #else
 static void byteReverse(unsigned char *buf, unsigned longs) {
-	uint32_t t;
 	do {
-		t = (uint32_t) ((unsigned) buf[3] << 8 | buf[2]) << 16 |
+		uint32_t t = (uint32_t)((unsigned)buf[3] << 8 | buf[2]) << 16 |
 			((unsigned) buf[1] << 8 | buf[0]);
 		*(uint32_t *) buf = t;
 		buf += 4;
@@ -1200,7 +1199,7 @@ int cWebemRequestHandler::authorize(const request& req, reply& rep)
 	return 0;
 }
 
-bool IsIPInRange(const std::string &ip, const _tIPNetwork ipnetwork) 
+bool IsIPInRange(const std::string &ip, const _tIPNetwork &ipnetwork) 
 {
 	if (ipnetwork.hostname.size()!=0)
 	{
